Fixed mobile search z-indexing issue with overlay.
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@2313 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/main.css
+++ b/content/src/main/content/jcr_root/etc/clientlibs/hdscorp/main/css/main.css
@@ -6735,7 +6735,7 @@ button.close {
 .modal-open .modal {
   overflow-x: hidden;
   overflow-y: auto;
-  z-index: 10000 ;
+  z-index: 99999 ;
   background:rgba(0,0,0,0.75);
 }
 
